.happypack/s-2130275630
SyntaxError: missing super() call in constructor

[0m [90m 3 | [39m
 [90m 4 | [39m[36mclass[39m [33mChooser[39m [36mextends[39m [33mEmitter[39m {
[31m[1m>[22m[39m[90m 5 | [39m  constructor() {
 [90m   | [39m  [31m[1m^[22m[39m
 [90m 6 | [39m    [90m// super();[39m
 [90m 7 | [39m  }
 [90m 8 | [39m  _open() {[0m

BabelLoaderError: SyntaxError: missing super() call in constructor

[0m [90m 3 | [39m
 [90m 4 | [39m[36mclass[39m [33mChooser[39m [36mextends[39m [33mEmitter[39m {
[31m[1m>[22m[39m[90m 5 | [39m  constructor() {
 [90m   | [39m  [31m[1m^[22m[39m
 [90m 6 | [39m    [90m// super();[39m
 [90m 7 | [39m  }
 [90m 8 | [39m  _open() {[0m

    at transpile (/Users/kz/projects/edusoho/node_modules/.6.2.10@babel-loader/lib/index.js:52:13)
    at Object.module.exports (/Users/kz/projects/edusoho/node_modules/.6.2.10@babel-loader/lib/index.js:133:12)
    at applySyncOrAsync (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/applyLoaders.js:341:21)
    at apply (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/applyLoaders.js:268:5)
    at /Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/applyLoaders.js:131:7
    at applyPitchLoader (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/applyLoaders.js:184:14)
    at applyPitchLoader (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/applyLoaders.js:192:14)
    at applyPitchLoaders (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/applyLoaders.js:222:4)
    at applyLoaders (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/applyLoaders.js:116:3)
    at HappyWorker.compile (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/HappyWorker.js:32:3)